# linkerd-grpcroute-demo

./: .dockerignore  Cargo.toml  Dockerfile  build.rs  k8s-manifest.yaml  run-demo  upstall-linkerd.sh
examples/: generate_types.rs
src/: main.rs
