[package]
name = "grpcroute-demo"
version = "0.1.0"
edition = "2021"


[[example]]
name = "generate-types"
crate-type = ["bin"]
path = "examples/generate_types.rs"


[dependencies]
anyhow = "1"
futures = "0.3"
prost = "0.12"
rand = "0.8"
tracing = "0.1"
tonic = "0.11"
tokio = { version = "1", features = ["full"] }
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }


[dev-dependencies]
prost-types = "0.12"
tonic-build = { version = "0.11", default-features = false, features = ["prost", "transport", "cleanup-markdown"] }

[build-dependencies]
anyhow = "1"
sha256 = "1.5"
ureq = { version = "2.9", features = ["json"] }
